--- a/MinFFD.html
+++ b/MinFFD.html
@@ -7,26 +7,71 @@
 </head>
 <body>
     <h1>Bereken de Film Focus Afstand (FFD)</h1>
-    <button onclick="berekenFFD()">Start Berekening</button>
+
+    <form id="ffdForm">
+        <label for="ofa">Object Film Afstand (OFA):</label>
+        <input type="number" id="ofa" name="ofa" step="0.01" required><br><br>
+
+        <label for="brongrootte">Brongrootte:</label>
+        <input type="number" id="brongrootte" name="brongrootte" step="0.01" required><br><br>
+
+        <label for="standaard">Kies een standaard:</label>
+        <select id="standaard" name="standaard" required>
+            <option value="1">EN-klasse A</option>
+            <option value="2">EN-klasse B</option>
+            <option value="3">ASME</option>
+        </select><br><br>
+
+        <div id="extraOpties" style="display:none;">
+            <label for="optie">Kies een extra optie (optioneel):</label>
+            <select id="optie" name="optie">
+                <option value="">Geen</option>
+                <option value="1">Centraal</option>
+                <option value="2">Excentrisch</option>
+            </select><br><br>
+        </div>
+
+        <div id="wanddikteInput" style="display:none;">
+            <label for="wt">Wanddikte (wt) in mm:</label>
+            <input type="number" id="wt" name="wt" step="0.01"><br><br>
+        </div>
+
+        <button type="button" onclick="berekenFFD()">Bereken FFD</button>
+    </form>
+
     <p id="output"></p>
 
     <script>
+        const standaardSelect = document.getElementById("standaard");
+        const extraOptiesDiv = document.getElementById("extraOpties");
+        const wanddikteDiv = document.getElementById("wanddikteInput");
+
+        standaardSelect.addEventListener("change", function() {
+            if (standaardSelect.value === '1' || standaardSelect.value === '2') {
+                extraOptiesDiv.style.display = "block";
+                wanddikteDiv.style.display = "none";
+            } else if (standaardSelect.value === '3') {
+                extraOptiesDiv.style.display = "none";
+                wanddikteDiv.style.display = "block";
+            } else {
+                extraOptiesDiv.style.display = "none";
+                wanddikteDiv.style.display = "none";
+            }
+        });
+
         function berekenFFD() {
+            let ofa = parseFloat(document.getElementById("ofa").value);
+            let brongrootte = parseFloat(document.getElementById("brongrootte").value);
+            let keuze = document.getElementById("standaard").value;
             let output = document.getElementById("output");
-            output.innerHTML = "Voer de volgende gegevens in:<br>";
-
-            // Gegevens invoer
-            let ofa = parseFloat(prompt("Object Film Afstand (OFA): "));
-            let brongrootte = parseFloat(prompt("Brongrootte: "));
-
-            // Kies de standaard
-            let keuze = prompt("Kies een standaard:\n1. EN-klasse A\n2. EN-klasse B\n3. ASME\nMaak je keuze (1, 2 of 3): ");
-
-            // Extra opties voor EN-klasse
             let centraal = false;
             let excentrisch = false;
+            let ffd;
+
+            output.innerHTML = "";
+
             if (keuze === '1' || keuze === '2') {
-                let optie = prompt("Kies een extra optie (optioneel):\n1. Centraal\n2. Excentrisch\nMaak je keuze (1 of 2, of laat leeg als geen keuze): ");
+                let optie = document.getElementById("optie").value;
                 if (optie === '1') {
                     centraal = true;
                 } else if (optie === '2') {
@@ -34,11 +79,8 @@
                 }
             }
 
-            let ffd;
-            // Berekeningen op basis van keuze
             if (keuze === '3') {  // ASME
-                let wt = parseFloat(prompt("Wanddikte (wt) in mm: "));
-
+                let wt = parseFloat(document.getElementById("wt").value);
                 if (wt < 50) {
                     var boa = (brongrootte * ofa) / 0.51;
                 } else if (wt >= 50 && wt < 75) {
@@ -49,29 +91,21 @@
                     output.innerHTML += "Ongeldige wanddikte. Voer een waarde tussen 0 en 100 mm in.<br>";
                     return;
                 }
-
                 ffd = boa + ofa;
-
             } else if (keuze === '2') {  // EN-klasse B
                 ffd = (brongrootte * 15 * Math.pow(ofa, 2 / 3)) + ofa;
-
-                // Pas aan voor Centraal of Excentrisch
                 if (centraal) {
                     ffd *= 0.5;
                 } else if (excentrisch) {
                     ffd *= 0.8;
                 }
-
             } else if (keuze === '1') {  // EN-klasse A
                 ffd = (brongrootte * 7.5 * Math.pow(ofa, 2 / 3)) + ofa;
-
-                // Pas aan voor Centraal of Excentrisch
                 if (centraal) {
                     ffd *= 0.5;
                 } else if (excentrisch) {
                     ffd *= 0.8;
                 }
-
             } else {
                 output.innerHTML += "Ongeldige keuze. Voer 1, 2 of 3 in.<br>";
                 return;
@@ -82,4 +116,3 @@
     </script>
 </body>
 </html>
-
