--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
         <li><a href="focusverandering.html">Focusverandering</a></li>
     </ul>
 
+    <a href="https://drive.google.com/drive/folders/16HaslSax0-6OXtku0elDYHCblgKD8VN-?usp=drive_link">Download de Android apps hier</a>
+
+
 </body>
 </html>
