--- a/afzettinggamma.html
+++ b/afzettinggamma.html
@@ -50,10 +50,10 @@
         <label for="Ci">Voer de hoeveelheid Ci in:</label><br>
         <input type="number" id="Ci" step="any"><br><br>
 
-        <label for="wanddikte_pb">Voer de wanddikte lood (Pb) in (mm):</label><br>
+        <label for="wanddikte_pb">Voer de doorstraalde dikte lood (Pb) in, in (mm):</label><br>
         <input type="number" id="wanddikte_pb" step="any"><br><br>
 
-        <label for="wanddikte_fe">Voer de wanddikte ijzer (Fe) in (mm):</label><br>
+        <label for="wanddikte_fe">Voer de doorstraalde dikte staal in, in (mm):</label><br>
         <input type="number" id="wanddikte_fe" step="any"><br><br>
 
         <label for="gewenste_dosis">Voer de gewenste dosis in (μSv/h):</label><br>
