--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="afzettinggamma.html">Afzetting gamma</a></li>
         <li><a href="filmsoortverandering.html">D4 D5 D7</a></li>
         <li><a href="focusverandering.html">Focusverandering</a></li>
-        <li><a href="LW_verdeler.html">Langsnaad verdeler</a></li>
+        <li><a href="LW_Verdeler.html">Langsnaad verdeler</a></li>
     </ul>
 
     <a href="https://drive.google.com/drive/folders/16HaslSax0-6OXtku0elDYHCblgKD8VN-?usp=drive_link">Download de Android apps hier</a>
