--- a/cw2.html
+++ b/cw2.html
@@ -73,6 +73,7 @@
     <p id="antwoordResultaat"></p>
     <p id="filmlengteResultaat"></p>
 
+<img src="OpnamesrichtlijnklasseB.png" alt="Ter info, slechts een richtlijn" />
 
  
 
