--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <li><a href="focusverandering.html">Focusverandering</a></li>
         <li><a href="LW_Verdeler.html">Langsnaad verdeler</a></li>
         <li><a href="cw2.html">CW / Effectieve film lengte</a></li>
+        <li><a href="verval2.html">Curie na verval</a></li>
     </ul>
 
     <a href="https://drive.google.com/drive/folders/16HaslSax0-6OXtku0elDYHCblgKD8VN-?usp=drive_link">Download de Android apps hier</a>
