--- a/verval2.html
+++ b/verval2.html
@@ -101,7 +101,7 @@
 
     <h2 id="result"></h2>
 
-    <h2>Bronnen Tabel</h2>
+    <h2>Bronnen Tabel(klik op een bron)</h2>
     <!-- Hier wordt de CSV-tabel weergegeven -->
     <div id="csvTable">De tabel wordt geladen...</div>
 
