--- a/verval2.html
+++ b/verval2.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activiteitsberekening</title>
     <script>
-        function calculateActivity() {
-            const isotope = document.getElementById("isotope").value;
-            const ci1 = parseFloat(document.getElementById("ci1").value);
-            const firstDate = new Date(document.getElementById("firstDate").value);
-            const secondDate = new Date(document.getElementById("secondDate").value || new Date());
+        // Functie om de activiteit te berekenen en het resultaat direct te tonen
+        function calculateActivity(isotope, ci1, firstDate, bron) {
+            const secondDate = new Date(); // Gebruik de huidige datum als tweede datum
+            firstDate = new Date(firstDate);
 
             // Bereken het aantal dagen tussen de twee datums
             const timeDifference = secondDate - firstDate;
             const days = timeDifference / (1000 * 3600 * 24);
 
             let ci2 = 0;
-            
+
             // Controleer welk isotoop is gekozen en voer de juiste berekening uit
             if (isotope === "Se75") {
                 ci2 = ci1 / Math.pow(2, days / 120);
@@ -24,8 +23,8 @@
                 ci2 = ci1 / Math.pow(2, days / 74);
             }
 
-            // Toon het resultaat
-            document.getElementById("result").innerHTML = `De activiteit is nog ${ci2.toFixed(2)} Curie.`;
+            // Toon het resultaat inclusief de naam van de bron
+            document.getElementById("result").innerHTML = `De activiteit van bron ${bron} is nog ${ci2.toFixed(2)} Curie.`;
         }
 
         // Functie om CSV-bestand in te laden en weer te geven als tabel met aanklikbare rijen
@@ -48,10 +47,11 @@
                         } else {
                             const bron = cols[0];
                             const type = cols[1];
-                            const activiteit = cols[2];
+                            const activiteit = parseFloat(cols[2]);
                             const datum = cols[3];
 
-                            table += `<tr onclick="fillForm('${type}', '${activiteit}', '${datum}')">`;
+                            // Voeg een onclick-event toe dat de berekening uitvoert bij klikken
+                            table += `<tr onclick="calculateActivity('${type}', ${activiteit}, '${datum.split('-').reverse().join('-')}', '${bron}')">`;
                             cols.forEach(col => {
                                 table += `<td>${col}</td>`;  // Voeg gegevens toe
                             });
@@ -66,13 +66,6 @@
                 .catch(error => console.error("Error loading CSV:", error));
         }
 
-        // Functie om de formuliervelden in te vullen op basis van de gekozen rij
-        function fillForm(type, activiteit, datum) {
-            document.getElementById("isotope").value = type; // Zet het type isotoop
-            document.getElementById("ci1").value = activiteit; // Vul de activiteit (Ci1) in
-            document.getElementById("firstDate").value = datum.split('-').reverse().join('-'); // Formatteer de datum correct voor de input
-        }
-
         // Laad de tabel als de pagina geladen is
         window.onload = function() {
             loadCSV('bronnen.csv');  // Laadt gegevens uit bronnen.csv
@@ -81,27 +74,10 @@
 </head>
 <body>
     <h1>Activiteitsberekening</h1>
-    
-    <label for="isotope">Kies een isotoop:</label>
-    <select id="isotope">
-        <option value="Se75">Se75</option>
-        <option value="Ir192">Ir192</option>
-    </select><br><br>
 
-    <label for="ci1">Ci op eerste datum (Ci1):</label>
-    <input type="number" id="ci1" required><br><br>
+    <h2 id="result">Klik op een bron om de activiteit te berekenen</h2>
 
-    <label for="firstDate">Eerste datum:</label>
-    <input type="date" id="firstDate" required><br><br>
-
-    <label for="secondDate">Tweede datum (standaard is de huidige datum):</label>
-    <input type="date" id="secondDate"><br><br>
-
-    <button onclick="calculateActivity()">Bereken activiteit</button>
-
-    <h2 id="result"></h2>
-
-    <h2>Bronnen Tabel(klik op een bron)</h2>
+    <h2>Bronnen Tabel (klik op een bron)</h2>
     <!-- Hier wordt de CSV-tabel weergegeven -->
     <div id="csvTable">De tabel wordt geladen...</div>
 
