--- a/verval2.html
+++ b/verval2.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activiteitsberekening</title>
     <script>
-        // Bereken de activiteit direct na het invullen van het formulier
-        function calculateActivity(isotope, ci1, firstDate, bron) {
-            const secondDate = new Date();  // Gebruik de huidige datum als de tweede datum
-            const firstDateObj = new Date(firstDate);
+        // Functie om de activiteit te berekenen
+        function calculateActivity() {
+            const isotope = document.getElementById("isotope").value;
+            const ci1 = parseFloat(document.getElementById("ci1").value);
+            const firstDate = new Date(document.getElementById("firstDate").value);
+            const secondDate = new Date(document.getElementById("secondDate").value || new Date()); // Huidige datum als standaard
 
             // Bereken het aantal dagen tussen de twee datums
-            const timeDifference = secondDate - firstDateObj;
+            const timeDifference = secondDate - firstDate;
             const days = timeDifference / (1000 * 3600 * 24);
 
             let ci2 = 0;
@@ -23,8 +25,8 @@
                 ci2 = ci1 / Math.pow(2, days / 74);
             }
 
-            // Toon het resultaat met de naam van de bron
-            document.getElementById("result").innerHTML = `De activiteit van bron ${bron} is nog ${ci2.toFixed(2)} Curie.`;
+            // Toon het resultaat
+            document.getElementById("result").innerHTML = `De activiteit is nog ${ci2.toFixed(2)} Curie.`;
         }
 
         // Functie om CSV-bestand in te laden en weer te geven als tabel met aanklikbare rijen
@@ -50,7 +52,7 @@
                             const activiteit = cols[2];
                             const datum = cols[3];
 
-                            table += `<tr onclick="fillFormAndCalculate('${bron}', '${type}', '${activiteit}', '${datum}')">`;
+                            table += `<tr onclick="fillForm('${bron}', '${type}', '${activiteit}', '${datum}')">`;
                             cols.forEach(col => {
                                 table += `<td>${col}</td>`;  // Voeg gegevens toe
                             });
@@ -65,14 +67,17 @@
                 .catch(error => console.error("Error loading CSV:", error));
         }
 
-        // Functie om de formuliervelden in te vullen en direct de berekening uit te voeren
-        function fillFormAndCalculate(bron, type, activiteit, datum) {
+        // Functie om de formuliervelden in te vullen op basis van de gekozen rij
+        function fillForm(bron, type, activiteit, datum) {
             document.getElementById("isotope").value = type; // Zet het type isotoop
             document.getElementById("ci1").value = activiteit; // Vul de activiteit (Ci1) in
             document.getElementById("firstDate").value = datum.split('-').reverse().join('-'); // Formatteer de datum correct voor de input
 
-            // Roep direct de berekening aan met de juiste parameters
-            calculateActivity(type, parseFloat(activiteit), datum.split('-').reverse().join('-'), bron);
+            // Reset het tweede datumveld naar leeg zodat de gebruiker kan kiezen
+            document.getElementById("secondDate").value = "";
+
+            // Bereken alvast op basis van de brongegevens
+            document.getElementById("result").innerHTML = `Gegevens van bron ${bron} geladen. Pas eventueel de velden aan en klik op "Bereken activiteit".`;
         }
 
         // Laad de tabel als de pagina geladen is
@@ -85,16 +90,21 @@
     <h1>Activiteitsberekening</h1>
     
     <label for="isotope">Kies een isotoop:</label>
-    <select id="isotope" disabled>
+    <select id="isotope">
         <option value="Se75">Se75</option>
         <option value="Ir192">Ir192</option>
     </select><br><br>
 
     <label for="ci1">Ci op eerste datum (Ci1):</label>
-    <input type="number" id="ci1" required disabled><br><br>
+    <input type="number" id="ci1" required><br><br>
 
     <label for="firstDate">Eerste datum:</label>
-    <input type="date" id="firstDate" required disabled><br><br>
+    <input type="date" id="firstDate" required><br><br>
+
+    <label for="secondDate">Tweede datum (standaard is de huidige datum):</label>
+    <input type="date" id="secondDate"><br><br>
+
+    <button onclick="calculateActivity()">Bereken activiteit</button>
 
     <h2 id="result"></h2>
 
