--- a/verval2.html
+++ b/verval2.html
@@ -104,7 +104,7 @@
     </script>
 </head>
 <body>
-    <h1>Activiteitsberekening</h1>
+    <h1>Activiteitsberekening(klik op een bron)</h1>
     
     <label for="isotope">Kies een isotoop:</label>
     <select id="isotope">
@@ -125,7 +125,7 @@
 
     <h2 id="result"></h2>
 
-    <h2>Bronnen Tabel</h2>
+    <h2>Bronnen Tabel(klik op de bron)</h2>
     <!-- Hier wordt de CSV-tabel weergegeven -->
     <div id="csvTable">De tabel wordt geladen...</div>
 
