--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             padding: 0;
         }
         .link-list li {
-            margin: 20px 0;
+            margin: 25px 0;
         }
         .link-list a {
             text-decoration: none;
             color: white;
             background-color: #007BFF;
             padding: 10px 20px;
-            border-radius: 5px;
+            border-radius: 7px;
         }
         .link-list a:hover {
             background-color: #0056b3;
@@ -39,13 +39,14 @@
     <p>maak een keuze:</p>
     
     <ul class="link-list">
-        <li><a href="MinFFD.html">Minimale FFD</a></li>
-        <li><a href="afzettinggamma.html">Afzetting gamma</a></li>
-        <li><a href="filmsoortverandering.html">D4 D5 D7</a></li>
         <li><a href="focusverandering.html">Focusverandering</a></li>
+        <li><a href="filmsoortverandering.html">D4 D5 D7</a></li>
+        <li><a href="verval2.html">Bronsterkte</a></li>
+        <li><a href="MinFFD.html">Minimale FFD</a></li>
+        <li><a href="Draadjesv2.html">Draadvereiste Klasse B en ASME</a></li>
+        <li><a href="afzettinggamma.html">Afzetting gamma</a></li>
         <li><a href="LW_Verdeler.html">Langsnaad verdeler</a></li>
         <li><a href="cw2.html">CW / Effectieve film lengte</a></li>
-        <li><a href="verval2.html">Bronsterkte</a></li>
     </ul>
 
     <a href="https://drive.google.com/drive/folders/16HaslSax0-6OXtku0elDYHCblgKD8VN-?usp=drive_link">Download de Android apps hier</a>
