--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="filmsoortverandering.html">D4 D5 D7</a></li>
         <li><a href="verval2.html">Bronsterkte</a></li>
         <li><a href="MinFFD.html">Minimale FFD</a></li>
-        <li><a href="Draadjesv2.html">Draadvereiste Klasse B en ASME</a></li>
+        <li><a href="Draadjesv2.html">Draadvereiste EN-B,ASME</a></li>
         <li><a href="afzettinggamma.html">Afzetting gamma</a></li>
         <li><a href="LW_Verdeler.html">Langsnaad verdeler</a></li>
         <li><a href="cw2.html">CW / Effectieve film lengte</a></li>
