--- a/cw2.html
+++ b/cw2.html
@@ -74,8 +74,8 @@
     <p id="antwoordResultaat"></p>
     <p id="filmlengteResultaat"></p>
 
-<img src="OpnamesrichtlijnklasseB.png" alt="Ter info, slechts een richtlijn" />
-
+<img src="OpnamesrichtlijnklasseB.png" alt= "Ter info, slechts een richtlijn"  />
+<img src="Schedulematen.png" alt= "Ter info"
  
 
 </body>
