--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -73,7 +73,7 @@
     <h2>Resultaat</h2>
     <p id="result"></p>
     
-    <img id="asmeImage" src="Lascategorie.webp" alt="ASME Lastype" style="display:none;">
+    <img id="asmeImage" src="Lascategorie.png" alt="ASME Lastype" style="display:none;">
 
     <script>
         document.getElementById("norm").addEventListener("change", function() {
