--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
             }
         }
     </style>
+    <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then((registration) => {
+          console.log('Service Worker geregistreerd met scope:', registration.scope);
+        })
+        .catch((error) => {
+          console.log('Service Worker registratie mislukt:', error);
+        });
+    });
+  }
+</script>
+
 </head>
 <body>
 
