--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <script>
      if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/service-worker.js')
+      navigator.serviceWorker.register('/rt/service-worker.js')
         .then((registration) => {
           console.log('Service Worker geregistreerd met scope:', registration.scope);
         })
